Fixed overflow issue

--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ h1 {
 	background-size: cover;
 	padding: 0;
 	margin: 0;
+	overflow: hidden;
 }
 
 .firstPageContent {
